--- a/index.html
+++ b/index.html
@@ -3,18 +3,16 @@
   <head>
     <meta charset="UTF-8" content="text/html" http-equiv="Content-Type">
     <meta content="width=280, user-scalable=no" name="viewport">
-    <title>
-      Door Server
-    </title>
+    <title>Door Open</title>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
     <script>
       var linda_url = "http://linda.masuilab.org";
       var tuple = ["door", "open"];
       var space = "delta";
     </script>
-    <script src="/js/jquery.rotate.js" type="text/javascript"></script>
-    <script src="/js/goldfish.js" type="text/javascript"></script>
-    <script src="/js/goldfish-door.js" type="text/javascript"></script>
+    <script src="./js/jquery.rotate.js"></script>
+    <script src="./js/goldfish.js"></script>
+    <script src="./js/goldfish-door.js"></script>
     <style>
       html{
         height : 100%;
@@ -39,9 +37,7 @@
   <body>
     <div id="content">
       <div id="header">
-        <h1>
-          Door Server
-        </h1>
+        <h1>Door Open</h1>
       </div>
       <div id="main">
         <p>
@@ -49,14 +45,14 @@
           <span id="angle">---</span>
         </p>
         <p>
-          <img id="sum" src="/img/sum.png">
-          <img id="turn" src="/img/turn.png">
+          <img id="sum" src="./img/sum.png">
+          <img id="turn" src="./img/turn.png">
         </p>
       </div>
       <hr>
       <div id="footer">
         source code :
-        <a href="https://github.com/masuilab/door-server">https://github.com/masuilab/door-server</a>
+        <a href="https://github.com/shokai/linda-door-open-goldfish">https://github.com/shokai/linda-door-open-goldfish</a>
       </div>
     </div>
   </body>
