--- a/index.html
+++ b/index.html
@@ -4,15 +4,6 @@
     <meta charset="UTF-8" content="text/html" http-equiv="Content-Type">
     <meta content="width=280, user-scalable=no" name="viewport">
     <title>Door Open</title>
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
-    <script>
-      var linda_url = "http://linda.masuilab.org";
-      var tuple = ["door", "open"];
-      var space = "delta";
-    </script>
-    <script src="./js/jquery.rotate.js"></script>
-    <script src="./js/goldfish.js"></script>
-    <script src="./js/goldfish-door.js"></script>
     <style>
       html{
         height : 100%;
@@ -55,5 +46,10 @@
         <a href="https://github.com/shokai/linda-door-open-goldfish">https://github.com/shokai/linda-door-open-goldfish</a>
       </div>
     </div>
+    <script src="./config.js"></script>
+    <script src="./js/jquery-2.0.1.min.js"></script>
+    <script src="./js/jquery.rotate.js"></script>
+    <script src="./js/goldfish.js"></script>
+    <script src="./js/goldfish-door.js"></script>
   </body>
 </html>
